Fix z-index for modales

--- a/trevor/src/index.css
+++ b/trevor/src/index.css
@@ -616,12 +616,13 @@ button.active {
 	flex-direction: column;
 	border: 2px solid #808080;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-	z-index: 10;
+	z-index: 30;
 }
 
 .patching-modal {
 	width: 80%;
 	height: 60%;
+	z-index: 10;
 }
 
 .about-modal {
